# watter_sensor_ble_prph

./: CMakeLists.txt  README.rst  prj.conf
src/: main.c
src/battery_voltage/: battery_voltage.c  battery_voltage.h
src/remote_service/: remote.c  remote.h
